--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,6 +31,10 @@ body {
     font-family: var(--font-padrao);
 }
 
+a.externo::after {
+    content: '\1F517';
+}
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
@@ -42,6 +46,7 @@ header > h1 {
     color: white;
     font-family: var(--font-destaque);
     font-size: 3em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.37);
 }
@@ -62,7 +67,7 @@ nav {
 }
 
 nav > a {
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     padding: 5px;
     text-decoration: none;
@@ -90,6 +95,8 @@ main {
 main h1 {
     color: var(--cor5);
     font-family: var(--font-android);
+    font-weight: normal;
+    font-size: 1.8em;
     text-align: center;
 }
 
@@ -97,12 +104,14 @@ main h2 {
     font-family: var(--font-android);
     color: var(--cor4);
     font-size: 1.3em;
+    font-weight: normal;
     background-image: linear-gradient(to right, var(--cor1), transparent);
     text-indent: 8px;
 }
 
 main  p {
     margin: 15px 0px;
+    margin-bottom: 20px;
     text-align: justify;
     text-indent: 30px;
     font-size: 1em;
@@ -137,13 +146,57 @@ main img.pequena {
     margin: auto;
 }
 
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.507);
+}
+
+aside h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+aside > ul {
+    list-style-position: inside;
+    columns: 2;
+    list-style-type: '\2714\00A0\00A0';
+}
+
 footer {
     background-color: black;
     color: white;
     text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
 }
 
 footer  a {
     color: white;
     text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
+}
+
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 59%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
